Open repo in ext browser with branch