@@ -1,7 +1,8 @@
 package org.abapgit.adt.ui.internal.repositories.actions;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import org.abapgit.adt.backend.model.abapgitrepositories.IRepository;
 import org.abapgit.adt.ui.AbapGitUIPlugin;
@@ -22,6 +23,12 @@ import org.eclipse.ui.plugin.AbstractUIPlugin;
  */
 public class OpenRepositoryAction extends Action {
 	private final IViewPart view;
+	private static final String GITHUB_DOMAIN = "github.com"; //$NON-NLS-1$
+	private static final String GITLAB_DOMAIN = "gitlab.com"; //$NON-NLS-1$
+	private static final String GIT_WDF_SAP_DOMAIN = "github.wdf.sap.corp"; //$NON-NLS-1$
+	private static final String GITHUB_INFRA_DOMAIN = "github.infra.hana.ondemand.com"; //$NON-NLS-1$
+	private static final String GITHUB_TOOLS_DOMAIN = "github.tools.sap"; //$NON-NLS-1$
+	private static final String BIT_BUCKET_DOMAIN = "bitbucket.org"; //$NON-NLS-1$
 
 	/**
 	 * @param view
@@ -36,18 +43,48 @@ public class OpenRepositoryAction extends Action {
 
 	@Override
 	public void run() {
+
 		IRepository repository = getRepository();
 		if (repository != null) {
 			try {
-				// Open default external browser
-				PlatformUI.getWorkbench().getBrowserSupport().getExternalBrowser().openURL(new URL(repository.getUrl()));
+				// Get Repository link
+				String repoLink = getLink(repository);
+				// Open the link in default external browser
+				URI uri = new URI(repoLink);
+				PlatformUI.getWorkbench().getBrowserSupport().getExternalBrowser().openURL(uri.toURL());
 			} catch (PartInitException | MalformedURLException exception) {
 				MessageDialog.openError(this.view.getViewSite().getShell(), Messages.AbapGitView_action_open_repo_error_dialog_title,
 						exception.getMessage());
 				AbapGitUIPlugin.getDefault().getLog()
 						.log(new Status(IStatus.ERROR, AbapGitUIPlugin.PLUGIN_ID, exception.getMessage(), exception));
+			} catch (URISyntaxException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
 			}
 		}
+	}
+
+	public String getLink(IRepository repository) {
+		String repoLink = repository.getUrl();
+		repoLink = repoLink.replace(".git", ""); //$NON-NLS-1$ //$NON-NLS-2$
+		// Remove protocol (http:// or https://)
+		String domain = repoLink.replaceFirst("https?://", ""); //$NON-NLS-1$ //$NON-NLS-2$
+
+		// Extract domain by splitting with '/'
+		domain = domain.split("/")[0]; //$NON-NLS-1$
+		// Get connected branch
+		String branch = repository.getBranchName();
+		// handle domain based repoLink generation
+		if (domain.equals(GITHUB_DOMAIN) || domain.equals(GITLAB_DOMAIN) || domain.equals(GITHUB_TOOLS_DOMAIN)
+				|| domain.equals(GITHUB_INFRA_DOMAIN) || domain.equals(GIT_WDF_SAP_DOMAIN)) {
+			branch = branch.replace("refs/heads/", "/tree/"); //$NON-NLS-1$//$NON-NLS-2$
+		} else if (domain.endsWith(BIT_BUCKET_DOMAIN)) {
+			repoLink = repoLink.replaceAll("https://.*?@", "https://"); //$NON-NLS-1$ //$NON-NLS-2$
+			branch = branch.replace("refs/heads/", "/src/"); //$NON-NLS-1$ //$NON-NLS-2$
+		}
+
+		// return the concatenated link that redirects to the branch
+		return repoLink + branch;
 	}
 
 	private IRepository getRepository() {
